# compressor

./: .gitignore  CMakeLists.txt
cli/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  root.cpp  root.hpp
test/cpp/: CMakeLists.txt  genbase.cpp  main.cpp
test/py/: main.py
